--- a/MWE - eficency of pandas backend on large joins - ibis.1533.ipynb
+++ b/MWE - eficency of pandas backend on large joins - ibis.1533.ipynb
@@ -84,6 +84,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Question\n",
+    "\n",
     "So, a join betwen idf1 and idf2 can not use the column \"a\" to join the two tables. In thery, the two columns \n",
     "are sorted and can be efficently joined. But, if i put the \"a\" column as normal columns and not index columns, the join\n",
     "can be performed, but i suppose that ibis can not use the fact that the columns is sorted to accelerate the join."
